--- a/content/w13.html
+++ b/content/w13.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w14.html'>w14</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li><a href='w14.html'>w14</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,56 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w12</h1>
-<p>零件1</p>
-<script>
-var winkVideoData = {
-  dataVersion: 1,
-  frameRate: 8,
-  buttonFrameLength: 4,
-  buttonFrameOffset: 2,
-  frameStops: {
-  },
-};
-</script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/w12-01.mp4" type="video/mp4"/></video></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass">零件2</div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<script>
-var winkVideoData = {
-  dataVersion: 1,
-  frameRate: 8,
-  buttonFrameLength: 4,
-  buttonFrameOffset: 2,
-  frameStops: {
-  },
-};
-</script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/w12-2.mp4" type="video/mp4"/></video></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass">零件3</div>
-<div class="winkVideoContainerClass"></div>
-<script>
-var winkVideoData = {
-  dataVersion: 1,
-  frameRate: 8,
-  buttonFrameLength: 4,
-  buttonFrameOffset: 2,
-  frameStops: {
-  },
-};
-</script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/w12-03.mp4" type="video/mp4"/></video></div>
-<br />w11 << <a href='w11.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+    <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='solvespace.html'>Next</a> >> solvespace<br /><h1>w13</h1>
+<br />w11 << <a href='w11.html'>Previous</a> <a href='solvespace.html'>Next</a> >> solvespace</div>
         
     <!-- footer -->
       <div class="container">
