--- a/content/nx.html
+++ b/content/nx.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='nx.html'>nx</a></li></li></ul></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='nx.html'>nx</a></li></li></ul></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>nx</h1>
+    <div id="tipue_search_content">onshape << <a href='onshape.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>nx</h1>
 <p>01</p>
 <script>
 var winkVideoData = {
@@ -193,7 +193,7 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div><br />w14 << <a href='w14.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<div class="winkVideoContainerClass"></div><br />onshape << <a href='onshape.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
