--- a/content/onshape.html
+++ b/content/onshape.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,9 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='hw.html'>Next</a> >> hw<br /><h1>About</h1>
-<p>cmsite</p>
-<br /> <a href='hw.html'>Next</a> >> hw</div>
+    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='nx.html'>Next</a> >> nx<br /><h1>onshape</h1><br />w14 << <a href='w14.html'>Previous</a> <a href='nx.html'>Next</a> >> nx</div>
         
     <!-- footer -->
       <div class="container">
