--- a/content/w14.html
+++ b/content/w14.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='nx.html'>nx</a></li></li></ul></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='nx.html'>nx</a></li></li></ul></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,8 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">solvespace << <a href='solvespace.html'>Previous</a> <a href='nx.html'>Next</a> >> nx<br /><h1>w14</h1>
-<br />solvespace << <a href='solvespace.html'>Previous</a> <a href='nx.html'>Next</a> >> nx</div>
+    <div id="tipue_search_content">solvespace << <a href='solvespace.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape<br /><h1>w14</h1>
+<br />solvespace << <a href='solvespace.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape</div>
         
     <!-- footer -->
       <div class="container">
