--- a/config/content.htm
+++ b/config/content.htm
@@ -430,7 +430,26 @@ var winkVideoData = {
 <source src="/downloads/w14-solvespace.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass">組合</div><h2>w14</h2>
-<h3>onshape</h3><h3>nx</h3>
+<h3>onshape</h3>
+<p>零件1</p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 8,
+  buttonFrameLength: 4,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="/downloads/onshape-01.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">零件2</div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div><h3>nx</h3>
 <p>01</p>
 <script>
 var winkVideoData = {
