--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -483,7 +483,25 @@ var winkVideoData = {
 <source src="/downloads/onshape-03.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass">零件3</div>
+<div class="winkVideoContainerClass">組合</div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 8,
+  buttonFrameLength: 4,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="/downloads/onshape組合.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">組合</div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div><h3>nx</h3>
 <p>零件1</p>
@@ -554,7 +572,7 @@ var winkVideoData = {
 <source src="/downloads/nx組合.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass">組合</div>
-<div class="winkVideoContainerClass"><a href="/downloads/nx.zip">w14 nx</a></div>
+<div class="winkVideoContainerClass"><a href="/downloads/nx組合.zip">組合</a></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div><h1>Brython</h1>
 <p>將 iterable 與 iterator <a h1="" href='/"https:/gist.githubusercontent.com/Yao-Hsien41023241/68a4b450f210cb854d72d188c0fe1384/raw/d653030415613d6177aff70118a929b5de98dcf7/hw-w10.py'>Brython</a></p>
