--- a/content/About.html
+++ b/content/About.html
@@ -143,7 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='hw.html'>Next</a> >> hw<br /><h1>About</h1>
 <p>cmsite</p>
-<br /> <a href='hw.html'>Next</a> >> hw</div>
+<p>倉儲連結:<a href="https://mdecad2022.github.io/site-Yao-Hsien41023241/content/index.html">https://mdecad2022.github.io/site-Yao-Hsien41023241/content/index.html</a></p><br /> <a href='hw.html'>Next</a> >> hw</div>
         
     <!-- footer -->
       <div class="container">
