--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,7 @@
 <h1>About</h1>
 <p>cmsite</p>
-<p>倉儲連結:<a href="https://mdecad2022.github.io/site-Yao-Hsien41023241/content/index.html">https://mdecad2022.github.io/site-Yao-Hsien41023241/content/index.html</a></p><h1>hw</h1>
+<p>倉儲連結:<a href="https://mdecad2022.github.io/site-Yao-Hsien41023241/content/index.html">https://mdecad2022.github.io/site-Yao-Hsien41023241/content/index.html</a></p>
+<p>網站連結:<a href="https://github.com/mdecad2022/site-Yao-Hsien41023241">https://github.com/mdecad2022/site-Yao-Hsien41023241</a></p><h1>hw</h1>
 <h2>w6</h2>
 <p>
 <script>
