--- a/content/CoppeliaSim.html
+++ b/content/CoppeliaSim.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='nx.html'>nx</a></li></ul><li><a href='CoppeliaSim.html'>CoppeliaSim</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='nx.html'>nx</a></li></ul><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='w16.html'>w16</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,10 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">nx << <a href='nx.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>CoppeliaSim</h1>
+    <div id="tipue_search_content">nx << <a href='nx.html'>Previous</a> <a href='w16.html'>Next</a> >> w16<br /><h1>CoppeliaSim</h1>
 <p><a href="https://www.youtube.com/watch?v=g-RFY7Owanc">youtube</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/g-RFY7Owanc" width="560"></iframe></p>
-<br />nx << <a href='nx.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<br />nx << <a href='nx.html'>Previous</a> <a href='w16.html'>Next</a> >> w16</div>
         
     <!-- footer -->
       <div class="container">
